# hackathon-todo

./: .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_T056-T068.md  PHASE7_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_HARDENING_T154-T159.md  TESTING_SUMMARY.md  nixpacks.toml  requirements.txt
.claude/agents/: backend-builder.md  frontend-composer.md
.claude/commands/: sp.git.commit_pr.md
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  DEPLOY.md  README.md  __init__.py  db.py  main.py  pyproject.toml  requirements.txt
backend/auth/: __init__.py  jwt_middleware.py  rate_limiter.py
backend/migrations/: 000_create_users_table.sql  001_create_tasks_table.sql  002_updated_at_trigger.sql  003_create_conversations_table.sql  004_create_messages_table.sql  005_add_tags_to_tasks.sql  005_fix_tasks_user_id_type.sql  006_fix_user_id_type.sql
backend/models/: __init__.py  enums.py  task.py  user.py
backend/routes/: __init__.py  tasks.py
backend/services/: __init__.py  task_service.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_integration.py  test_task_routes.py  test_task_service.py
database/: README.md
docs/: ARCHITECTURE.md
frontend/: .env.local.example  .eslintignore  DEPLOY.md  FILTER_SORT_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  README.md  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  Navbar.tsx  PriorityBadge.tsx  StatusBadge.tsx  TagSelector.tsx  TaskCard.tsx  TaskFilters.tsx  TaskSort.tsx  TaskTable.tsx  Toast.tsx  ToastRenderer.tsx
frontend/lib/: auth-client.ts  auth.ts  toast-context.tsx
phase1/: README.md  mypy.ini  pyproject.toml  run.sh
phase3-backend/: .env.example  =0.2.9  README.md  pyproject.toml
phase3-backend/app/: config.py  db.py  main.py
phase3-backend/app/agents/: mcp_client.py  openai_agent.py
phase3-backend/app/auth/: jwt_middleware.py  rate_limiter.py
phase3-backend/app/models/: chat.py
phase3-backend/app/routes/: __init__.py  chat.py  health.py
phase3-backend/app/schemas/: __init__.py  errors.py
phase3-backend/app/services/: cache_service.py  chat_service.py
phase3-backend/app/utils/: __init__.py  sanitization.py
phase3-frontend/: .env.local.example  README.md  package-lock.json  package.json  test-db-connection.js  test-pg-connection.js  tsconfig.tsbuildinfo  vercel.json
phase3-mcp-server/: .env.example  README.md  pyproject.toml
(+197 files in other folders)
